# backend-web3-in-rust

./: Cargo.toml  README.md
contracts/: .env.example  foundry.toml  package-lock.json  package.json
contracts/broadcast/Counter.s.sol/1/: run-1718384336.json  run-1718390234.json
contracts/broadcast/Counter.s.sol/11155111/: run-1717952784.json  run-1717952878.json  run-1718130746.json  run-1718383256.json
contracts/script/: Counter.s.sol
contracts/src/: generateKey.js
src/: counter.json  counter.rs  main.rs  routes.rs
